--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,26 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  encoding: unicode
+  database: project_development
+  pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: project_development
+  pool: 5
+  timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: project_test
+  pool: 5
+  timeout: 5000
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: project_production
+  username: username
+  password: <%= ENV['PROJECT_DATABASE_PASSWORD'] %>
+  pool: 5
+  timeout: 5000
